--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,22 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "pirsch-analytics/laravel-pirsch",
+    "description": "Official Laravel integration for Pirsch Analytics.",
     "keywords": [
-        ":vendor_name",
+        "pirsch-analytics",
         "laravel",
-        ":package_slug"
+        "laravel-pirsch"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/pirsch-analytics/laravel-pirsch",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Marvin Blum",
+            "email": "marvin.blum@emvi.com",
+            "role": "Developer"
+        },
+        {
+            "name": "Zep Fietje",
+            "email": "hey@zepfietje.com",
             "role": "Developer"
         }
     ],
@@ -35,13 +40,12 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Pirsch\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Pirsch\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -51,15 +55,19 @@
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Pirsch\\PirschServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "Pirsch": "Pirsch\\Facades\\Pirsch"
             }
         }
     },
