--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,12 +13,14 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: ['8.1', '8.2','8.3']
-        laravel: ['9.*','10.*']
+        php: ['8.1','8.2','8.3']
+        laravel: ['9.*','10.*','11.*']
         stability: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: '9.*'
             stability: prefer-lowest
+          - laravel: '11.*'
+            php: '8.1'
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
