--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
     "require-dev": {
         "laravel/pint": "^0.2.2",
         "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^7.0",
+        "larastan/larastan": "^2.0.1",
+        "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
