--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,10 @@
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
+        "guzzlehttp/guzzle": "^7.8",
+        "larastan/larastan": "^2.0.1",
         "laravel/pint": "^0.2.2",
         "nunomaduro/collision": "^6.0|^7.0|^8.0",
-        "larastan/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0|^8.0|^9.0",
         "pestphp/pest-plugin-laravel": "^1.1|^2.0",
         "phpstan/extension-installer": "^1.1",
