--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,24 +2,31 @@ name: run-tests
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    types: [opened, synchronize, reopened]
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
         php: ['8.1', '8.2', '8.3']
-        laravel: ['9.*', '10.*', '11.*']
+        laravel: ['9.*', '10.*', '11.*', '12.*']
         stability: [prefer-lowest, prefer-stable]
         exclude:
-          - laravel: '9.*'
+          - laravel: 9.*
             stability: prefer-lowest
-          - laravel: '11.*'
+          - laravel: 11.*
+            php: '8.1'
+          - laravel: 12.*
             php: '8.1'
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
