--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.8",
-        "larastan/larastan": "^2.0.1",
+        "larastan/larastan": "^2.0|^3.0",
         "laravel/pint": "^0.2.2|^1.21",
         "nunomaduro/collision": "^6.0|^7.0|^8.0",
         "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
